src/objects/ACETOnshoreIndicatorVerbiage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ACETOnshoreIndicatorVerbiageExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACETOnshoreIndicatorVerbiageExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <description>Onshore Restriction Code Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hover_Help_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hover Help Description</label>
        <type>TextArea</type>
    </fields>
    <label>ACETOnshoreIndicatorVerbiage</label>
</CustomObject>